--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 streamlit==0.68.1
 pip==23.2
-pandas==0.25.3
+pandas
 base58==2.0.0
-matplotlib==3.1.3
-numpy==1.18.1
-yfinance==0.1.54
+matplotlib
+numpy==1.24.3
+yfinance
 lxml
 pandas_datareader
-tensorflow
+tensorflow==2.13.0
 keras
 scikit-learn
 plotly
